src/test/ui/consts/const-eval/ub-enum-overwrite.stderr
error[E0080]: it is undefined behavior to use this value
  --> $DIR/ub-enum-overwrite.rs:8:1
   |
LL | const _: u8 = {
   | ^^^^^^^^^^^ constructing invalid value: encountered uninitialized bytes, but expected initialized bytes
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 1, align: 1) {
               __                                              │ ░
           }

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
